# cyclomatic-complexity

./: .gitignore  pyproject.toml
cyclomatic_complexity/: __init__.py  get_resources.ipynb  graph1.ipynb  paper_data.py  tools_required.ipynb
cyclomatic_complexity/.ipynb_checkpoints/: get_resources-checkpoint.ipynb
paper/: build.sh  cyclomatic-complexity.tex
paper/data/: conclusion.tex  go.mod  introduction.tex  missing_data.tex  time_example_one.go  time_example_two.go  understanding-cc.tex  understanding_cc.py  using_the_cyclomatic_complexity_metric.tex
paper/data/case_study/: data_collection.tex  diving_into_the_complexity.tex  initial_assumptions.tex  loc.tex  main.tex  reference.tex
