[tool.poetry]
name = "cyclomatic-complexity"
version = "0.1.0"
description = ""
authors = ["Jim Fitzpatrick <jfitzpat@redhat.com>"]
readme = "README.md"
packages = [{include = "cyclomatic_complexity"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
tabulate = "^0.9.0"
matplotlib = "^3.8.2"
radon = "^6.0.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
